--- a/spug_web/package.json
+++ b/spug_web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@antv/data-set": "^0.10.2",
     "ace-builds": "^1.4.7",
     "antd": "^3.25.0",
